--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewpoint" content="width=device-width,initial-scale=1.0">
-    <title> Devan Tueller|wdd130</title>
+    <title> Devan Tueller|WDD130</title>
     </head>
     <body>
       <header>
@@ -14,12 +14,12 @@
         </nav>
      </header>
      <main>
-        <h1>Devan Tueller|wdd130</h1>
+        <h1>Devan Tueller|WDD130</h1>
         <img src="images/profile.jpg" alt="Hello my name is Devan Tueller" width="200">
         <p>Hello my name is Devan Tueller and I am from Hyde Park Utah. I enjoy Software Development and Disney and sports <p>
         </main>
         <footer>
-            <p>&copy;2023😊 Devan Tueller ✌️Hyde Park Utah<p>
+            <p>&copy;2023😊 Devan Tueller ✌️Hyde Park Utah<p>ized
         </footer>
   </body>
 </html>
