--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-us">
     <head>
-    <meta charset="utf-8">
-    <meta name="viewpoint" content="width=device-width,initial-scale=1.0">
-    <meta name="discription" content="Home page">
-    <meta name="author" content="Devan">
-    <link rel="stylesheet" href="styles/styles.css">
-    <title> Devan Tueller|WDD130</title>
+      <meta charset="utf-8>
+      <meta name="viewpoint" content="width=device-width,initial-scale=1.0">
+      <meta name="discription" "content devan's WDD 130 course homepage">
+      <meta name="author" content="devan">
+      <link rel="stylesheet" href="styles/styles.css">
+      <title> Devan Tueller|WDD130</title>
     </head>
     <body>
       <header>
@@ -17,13 +17,13 @@
         </nav>
      </header>
      <main>
-     <hi>Devan Tueller| WDD 130</hi>
-     <img src="images/profile.jpg" alt="Hello my name is Devan Tueller" width="200">
-     <p>Hello! my name is Devan Tueller and I am from Hyde Park utah. I enjoy Software Development playing black jack in Vegas and Walt Disney World</p>
+       <hi>Devan Tueller| WDD 130</hi>
+       <img src="images/profile.jpg" alt="Hello my name is Devan Tueller" width="200">
+       <p>Hello! my name is Devan Tueller and I am from Hyde Park utah. I enjoy Software Development playing black jack in Vegas and Walt Disney World</p>
      </main>
      <aside>
       <h2>Utah</h2>
-      <img src="images/bear lake.jpg" alt="bear lake" width="200">
+      <img src="images/bear-lake.jpg" alt="bear lake "width="200">
       <p>Utah is a state in the western United States and is bordered by Idaho to the north and has Bear Lake at the top of the state from the top of Utah it is an 8 hour drive to Las Vegas in the middle of the state is the capital Salt Lake City and houses Hill Air Force Base</p>
      </aside>
      <footer>
