White Water Rafting Site Plan

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
     <head>
     <meta charset="utf-8">
-    <meta name="viewpoint" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="discription" content="Devan Tueller BYU-Idaho WDD130 home page">
     <meta name="author" content="Devan Tueller">
     <title> Devan Tueller|WDD130</title>
