wrote CSS and finished Site Plan

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -22,7 +22,7 @@
    <h3></h3>
    <img src="images/gravity.png" alt="White Water Rafting Logo">
    <h2>Styles Guide</h2>
-   <h3>https://coolors.co/333232-f7b2ad-ceb7b3-705f5c-b7b7b7-9abca7</h3>
+   <h3><a> href="https://coolors.co/333232-f7b2ad-ceb7b3-705f5c-b7b7b7-9abca7" target=_blank">https://coolors.co/333232-f7b2ad-ceb7b3-705f5c-ffffff-9abca7</a>
    <p></p>
    <h3>Typography</h3>
    <h4>Headings Example Font</h4>
@@ -37,8 +37,8 @@
     <a> href="#">trips</a>
     <a> href"#">Contact Us</a>
    </nav>
-   <h2>Wireframes</h2>
-   <h3>Home Page Wireframes</h3>
-   <img> src="https://"
 </main>
+<footer> 
+    <p>&copy;2023 👌 Rafting Site Document ✌️ Devan Tueller  WDD 130</p>
+</footer>
 </html>
