edited CSS and HTML

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="discription" content="Devan Tueller BYU-Idaho WDD130 home page">
+    <meta name="description" content="Devan Tueller BYU-Idaho WDD130 home page">
     <meta name="author" content="Devan Tueller">
     <title> Devan Tueller|WDD130</title>
     <link rel="stylesheet" href="styles/styles.css">
