added HTL Comment

--- a/index.html
+++ b/index.html
@@ -39,5 +39,5 @@
             <p>&copy;2023😊 Devan Tueller ✌️Hyde Park Utah<p>
         </footer>
   </body>
-  /* Added classes to HTML */
 </html>
+<!--A date>
