enhanced home page

--- a/index.html
+++ b/index.html
@@ -14,23 +14,22 @@
           <a href="#">Home</a>
           <a href="wwr/">White Water Rafting Website</a>
           <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-          <a> href="https://www.linkedin.com/in/devan-tueller/"</a>
-          <a> href="https://www.facebook.com/aggies60/</a>
+          <a href="https://www.linkedin.com/in/devan-tueller/"></a>
+          <a href="https://www.facebook.com/aggies60/"></a>
+        
         </nav>
      </header>
      <main>
         <h1>Devan Tueller|WDD130</h1>
         <img src="images/profile.jpg" alt="Hello my name is Devan Tueller" width="200">
         <p>Hello my name is Devan Tueller and I am from Hyde Park Utah. I enjoy Software Development and Disney and sports <p>
-        <ul>
-        <ul class="box"></ul>
-        <li>https://www.churchofjesuschrist.org/temples/details/las-vegas-nevada-temple?lang=eng</li>
-        <li><a>https://www.churchofjesuschrist.org/temples/details/manhattan-new-york-temple?lang=eng</a></li>
-        <li><a>https://www.churchofjesuschrist.org/temples/details/manila-philippines-temple?lang=eng</a></li>
-        </ul>
-        </main>
-        <aside>
-          <aside class="box">
+        <ul class="box">
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/manhattan-new-york-temple?lang=eng" target=_"blank"> Manhattan New York Temple</a></li>
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/manila-philippines-temple?lang=eng" targer=_"blank"> Manila Philippines Temple </a></li>
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/las-vegas-nevada-temple?lang=eng" target="_blank"> Las Vegas Temple</a></li>
+      </ul>  
+      </main>
+        <aside class="box">
           <h2>Utah</h2>
           <img src="images/bear-lake.jpg" alt="bear lake" width="200">
           <p>Utah is a state in the western United States and is bordered by Idaho to the north and has Bear Lake at the top of the state from the top of Utah it is an 8 hour drive to Las Vegas in the middle of the state is the capital Salt Lake City and houses Hill Air Force Base</p>
@@ -40,4 +39,4 @@
         </footer>
   </body>
 </html>
-<!--2023>
+/* september 28 2023 */
