--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
           <a href="#">Home</a>
           <a href="wwr/">White Water Rafting Website</a>
           <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-          <a href="https://www.linkedin.com/in/devan-tueller/"></a>
-          <a href="https://www.facebook.com/aggies60/"></a>
-        
+          <a href="https://www.linkedin.com">devantueller</a>
+          <a href="https://www.facebook.com">aggies60</a>
         </nav>
      </header>
      <main>
@@ -39,4 +38,4 @@
         </footer>
   </body>
 </html>
-/* september 28 2023 */
+<!--september 28 2023-->
