edited CSS and HTML home page

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <img src="images/profile.jpg" alt="Hello my name is Devan Tueller" width="200">
         <p>Hello my name is Devan Tueller and I am from Hyde Park Utah. I enjoy Software Development and Disney and sports <p>
         <ul class="box">
-        <li><a href="https://www.churchofjesuschrist.org/temples/details/manhattan-new-york-temple?lang=eng" target=_"blank"> Manhattan New York Temple</a></li>
-        <li><a href="https://www.churchofjesuschrist.org/temples/details/manila-philippines-temple?lang=eng" targer=_"blank"> Manila Philippines Temple </a></li>
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/manhattan-new-york-temple?lang=eng" target=_blank> Manhattan New York Temple</a></li>
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/manila-philippines-temple?lang=eng" target=_blank> Manila Philippines Temple </a></li>
         <li><a href="https://www.churchofjesuschrist.org/temples/details/las-vegas-nevada-temple?lang=eng" target="_blank"> Las Vegas Temple</a></li>
       </ul>  
       </main>
